--- a/Collect_Twitter_Data.ipynb
+++ b/Collect_Twitter_Data.ipynb
@@ -26,24 +26,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "80b7a187-9aaa-415d-9b12-af88fc29acbb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pymongo\n",
+      "  Using cached pymongo-4.13.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (22 kB)\n",
+      "Collecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+      "  Using cached dnspython-2.7.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Using cached pymongo-4.13.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.2 MB)\n",
+      "Using cached dnspython-2.7.0-py3-none-any.whl (313 kB)\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.7.0 pymongo-4.13.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3f526554-c100-4747-8b25-148a2602353e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tweepy\n",
+      "  Downloading tweepy-4.15.0-py3-none-any.whl.metadata (4.1 kB)\n",
+      "Collecting oauthlib<4,>=3.2.0 (from tweepy)\n",
+      "  Downloading oauthlib-3.2.2-py3-none-any.whl.metadata (7.5 kB)\n",
+      "Requirement already satisfied: requests<3,>=2.27.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from tweepy) (2.32.3)\n",
+      "Collecting requests-oauthlib<3,>=1.2.0 (from tweepy)\n",
+      "  Downloading requests_oauthlib-2.0.0-py2.py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from requests<3,>=2.27.0->tweepy) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from requests<3,>=2.27.0->tweepy) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from requests<3,>=2.27.0->tweepy) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages (from requests<3,>=2.27.0->tweepy) (2025.1.31)\n",
+      "Downloading tweepy-4.15.0-py3-none-any.whl (99 kB)\n",
+      "Downloading oauthlib-3.2.2-py3-none-any.whl (151 kB)\n",
+      "Downloading requests_oauthlib-2.0.0-py2.py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: oauthlib, requests-oauthlib, tweepy\n",
+      "Successfully installed oauthlib-3.2.2 requests-oauthlib-2.0.0 tweepy-4.15.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install tweepy"
    ]
@@ -58,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c1ec8411-fe46-4795-a493-6b1a55294954",
    "metadata": {
     "tags": []
@@ -103,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d9693a5a-f992-45a0-9961-0f7b1e7d2f55",
    "metadata": {
     "tags": []
@@ -138,12 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4dc19bad-51d9-4f00-b1cc-3c7ee1ec4c43",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tweet.id_1'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mongo_client = MongoClient(mongodb_connect)\n",
     "db = mongo_client.demo # use or create a database named demo\n",
