--- a/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
+++ b/Exploring-Twitter-Data-with-Vector-Databases-and-RAG-Systems.ipynb
@@ -350,7 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "user_query = 'study ai'\n",
+    "user_query = 'ai advance'\n",
     "\n",
     "for tweet in vector_search(user_query):\n",
     "    print(tweet['tweet']['text'])"
