fixed the image issues

--- a/multimodal_search_engine_tutorial.ipynb
+++ b/multimodal_search_engine_tutorial.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1HA2vITKPNEmtXlN6xknCeB_YUFcTiFHf",
-      "authorship_tag": "ABX9TyPuPUBB3QiCAHvR+z7sDzE3",
+      "authorship_tag": "ABX9TyMQlrojGiDucLkhRnlbIyTF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,15 +122,11 @@
         "The illustration below demonstrates the core magic of **Multimodal Embeddings**:\n",
         "\n",
         "1.  **Dual Inputs:** We feed two completely different types of data—an **Image** (pixels of a cat) and **Text** (\"A fluffy cat\")—into the same AI model.\n",
-        "2.  **Translation:** The model converts both inputs into **Vectors** (lists of numbers). You can think of these vectors as coordinates (X, Y, Z) in a 3D space.\n",
-        "3.  **The Shared Space:**\n",
-        "    * Notice that the **Blue Dot** (Image) and the **Green Dot** (Text) land very close to each other.\n",
-        "    * This happens because the model understands they represent the **same concept** (\"Cat\").\n",
-        "4.  **Semantic Distance:**\n",
-        "    * Unrelated concepts like **\"Pizza\"** or **\"Car\"** form their own clusters far away.\n",
-        "    * When you search for \"Pizza,\" the computer simply looks at the \"Pizza\" corner of this cube and grabs whatever is there—whether it's a text description or a photo.\n",
+        "2.  **Translation:** The model converts both inputs into **Vectors** (lists of numbers).\n",
+        "3.  **The Shared Space:** Notice that the **Blue Dot** (Image) and the **Green Dot** (Text) land very close to each other because they represent the same concept.\n",
         "\n",
-        "![Shared Vector Space](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/Gemini_Generated_Image_rj1wcvrj1wcvrj1w.png?raw=true)\n",
+        "<img src=\"https://raw.githubusercontent.com/lbsocial/data-analysis-with-generative-ai/main/image/Gemini_Generated_Image_rj1wcvrj1wcvrj1w.png\" width=\"600\" alt=\"Shared Vector Space\">\n",
+        "\n",
         "*(Source: LBSocial)*"
       ],
       "metadata": {
@@ -457,14 +453,15 @@
       "source": [
         "## 🧠 Step 3: The \"Split Strategy\" for Embeddings\n",
         "\n",
-        "This is the core logic of our Multimodal engine. A standard search engine treats a tweet as one object. We will treat it as **two**:\n",
+        "This is the core logic of our Multimodal engine. We treat a tweet as two objects:\n",
         "\n",
-        "1.  **Text Vector:** We convert the tweet's text into a list of numbers representing its *meaning*.\n",
-        "2.  **Image Vector:** If the tweet has an image, we convert the image into a list of numbers representing its *visual content*.\n",
+        "1.  **Text Vector:** Represents the meaning of the text.\n",
+        "2.  **Image Vector:** Represents the visual content of the image.\n",
         "\n",
         "By storing these separately, we can match a user's query against *either* the text *or* the image.\n",
         "\n",
-        "![Split Strategy Visualization](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/Gemini_Generated_Image_bctu0ubctu0ubctu.png?raw=true)\n",
+        "<img src=\"https://raw.githubusercontent.com/lbsocial/data-analysis-with-generative-ai/main/image/Gemini_Generated_Image_bctu0ubctu0ubctu.png\" width=\"600\" alt=\"Split Strategy\">\n",
+        "\n",
         "*(Source: LBSocial)*"
       ],
       "metadata": {
@@ -642,15 +639,14 @@
       "source": [
         "## 🔍 Step 5: Define the \"Double-Tap\" Search Logic\n",
         "\n",
-        "A common challenge in multimodal search is the **\"Modality Gap\"**—text vectors and image vectors often cluster in slightly different numeric ranges. If we run a simple search, the results might be dominated by *only* text or *only* images.\n",
+        "To fix the **\"Modality Gap\"** (where text and images group separately), we use a **Double-Tap Strategy**:\n",
         "\n",
-        "To fix this, we use a **Double-Tap Strategy**:\n",
+        "1.  **Search A:** Force the database to find the best **Text** matches.\n",
+        "2.  **Search B:** Force the database to find the best **Image** matches.\n",
+        "3.  **Merge:** Combine both sets to guarantee a rich result.\n",
         "\n",
-        "1.  **Search A:** We force the database to find the best **Text** matches.\n",
-        "2.  **Search B:** We force the database to find the best **Image** matches.\n",
-        "3.  **Merge:** We combine both sets of results to guarantee the user gets a rich, multimodal answer.\n",
+        "<img src=\"https://raw.githubusercontent.com/lbsocial/data-analysis-with-generative-ai/main/image/Gemini_Generated_Image_mqvyn0mqvyn0mqvy.png\" width=\"600\" alt=\"Double Tap Strategy\">\n",
         "\n",
-        "![Double-Tap Search Strategy](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/Gemini_Generated_Image_mqvyn0mqvyn0mqvy.png?raw=true)\n",
         "*(Source: LBSocial)*"
       ],
       "metadata": {
