--- a/multimodal_search_engine_tutorial.ipynb
+++ b/multimodal_search_engine_tutorial.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1HA2vITKPNEmtXlN6xknCeB_YUFcTiFHf",
-      "authorship_tag": "ABX9TyMQlrojGiDucLkhRnlbIyTF",
+      "authorship_tag": "ABX9TyOlDPNKTTR6F9Fxb3Feg+d2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -460,7 +460,7 @@
         "\n",
         "By storing these separately, we can match a user's query against *either* the text *or* the image.\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/lbsocial/data-analysis-with-generative-ai/main/image/Gemini_Generated_Image_bctu0ubctu0ubctu.png\" width=\"600\" alt=\"Split Strategy\">\n",
+        "<img src=\"https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/Gemini_Generated_Image_bctu0ubctu0ubctu.png?raw=true\" width=\"600\" alt=\"Split Strategy\">\n",
         "\n",
         "*(Source: LBSocial)*"
       ],
@@ -645,7 +645,7 @@
         "2.  **Search B:** Force the database to find the best **Image** matches.\n",
         "3.  **Merge:** Combine both sets to guarantee a rich result.\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/lbsocial/data-analysis-with-generative-ai/main/image/Gemini_Generated_Image_mqvyn0mqvyn0mqvy.png\" width=\"600\" alt=\"Double Tap Strategy\">\n",
+        "<img src=\"https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/Gemini_Generated_Image_mqvyn0mqvyn0mqvy.png?raw=true\" width=\"600\" alt=\"Double Tap Strategy\">\n",
         "\n",
         "*(Source: LBSocial)*"
       ],
