--- a/multimodal_search_engine_tutorial.ipynb
+++ b/multimodal_search_engine_tutorial.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1HA2vITKPNEmtXlN6xknCeB_YUFcTiFHf",
-      "authorship_tag": "ABX9TyOlDPNKTTR6F9Fxb3Feg+d2",
+      "authorship_tag": "ABX9TyPDy0ICrtL6yAIuNdbGLbD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,10 +102,12 @@
       "source": [
         "from sentence_transformers import SentenceTransformer\n",
         "import time\n",
+        "from PIL import Image\n",
         "\n",
         "print(\"⏳ Loading CLIP model... (this may take a moment)\")\n",
         "# We use CLIP because it understands both Text and Images in the same vector space\n",
-        "embedding_model = SentenceTransformer('clip-ViT-B-32')\n",
+        "model = SentenceTransformer('clip-ViT-B-32')\n",
+        "Image.MAX_IMAGE_PIXELS = None\n",
         "print(\"✅ Model loaded!\")"
       ],
       "metadata": {
@@ -478,28 +480,12 @@
         "from google.colab import userdata\n",
         "from pymongo import MongoClient\n",
         "\n",
-        "# --- 1. SETUP ---\n",
-        "try:\n",
-        "    mongo_uri = userdata.get('mongodb_connection')\n",
-        "    client = MongoClient(mongo_uri)\n",
-        "    db = client['demo']\n",
-        "    collection = db['tweet_collection']\n",
         "\n",
-        "    # 🛠️ FIX: Disable the \"DecompressionBombWarning\" for large Unsplash images\n",
-        "    Image.MAX_IMAGE_PIXELS = None\n",
-        "\n",
-        "    print(\"⏳ Loading CLIP Model...\")\n",
-        "    model = SentenceTransformer('clip-ViT-B-32')\n",
-        "    print(\"✅ Model Loaded.\")\n",
-        "\n",
-        "except Exception as e:\n",
-        "    print(f\"❌ Setup Error: {e}\")\n",
-        "\n",
-        "# --- 2. FETCH RAW DATA ---\n",
+        "# --- 1. FETCH RAW DATA ---\n",
         "raw_tweets = list(collection.find({}))\n",
         "print(f\"📂 Found {len(raw_tweets)} raw tweets to process.\")\n",
         "\n",
-        "# --- 3. EMBEDDING LOOP ---\n",
+        "# --- 2. EMBEDDING LOOP ---\n",
         "vector_documents = []\n",
         "print(\"🚀 Starting Embedding Process...\")\n",
         "\n",
@@ -554,7 +540,7 @@
         "            # If an image is corrupt or too big for Colab RAM, skip it\n",
         "            print(f\"   ⚠️ Image skipped for ID {tweet_id}: {e}\")\n",
         "\n",
-        "# --- 4. SAVE RESULTS ---\n",
+        "# --- 3. SAVE RESULTS ---\n",
         "if vector_documents:\n",
         "    collection.delete_many({})\n",
         "    collection.insert_many(vector_documents)\n",
@@ -585,11 +571,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# [Markdown]\n",
-        "# ## 4. Create Vector Search Index\n",
-        "# We define the index structure (512 dimensions for CLIP) and wait for it to be ready.\n",
-        "\n",
-        "# [Code]\n",
         "from pymongo.operations import SearchIndexModel\n",
         "import time\n",
         "\n",
@@ -746,8 +727,7 @@
         "## 🚀 Step 6: Test the Engine\n",
         "Now it's time to verify our system. We will run three types of queries:\n",
         "1.  **Text-to-Text:** Searching \"Pizza\" to find tweets discussing food.\n",
-        "2.  **Image-to-Image:** Searching with a photo of a dog to find similar pets.\n",
-        "3.  **Concept Search:** Searching \"Fast Computer\" to see if the AI can link the *concept* of speed to images of GPUs and Keyboards."
+        "2.  **Image-to-Image:** Searching with a photo of a dog to find similar pets.\n"
       ],
       "metadata": {
         "id": "R7hArfG6vR3L"
@@ -763,39 +743,10 @@
         "mixed_search(\"pizza\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9lXip5CijjLp",
-        "outputId": "687d838a-a3d6-45d3-ac0c-f930077f00c6"
+        "id": "9lXip5CijjLp"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            ">>> TEST 1: Text Search ('Pizza')\n",
-            "📝 Query: 'pizza'\n",
-            "\n",
-            "🔎 MIXED RESULTS (Guaranteed):\n",
-            "============================================================\n",
-            "📄 BEST TEXT MATCHES:\n",
-            "   • 0.9319 | food | \"Ordering late-night pizza because I'm too lazy to ...\"\n",
-            "   • 0.9276 | food | \"Why does pineapple on pizza cause so many argument...\"\n",
-            "   • 0.9089 | food | \"Craving some authentic Italian pasta right now....\"\n",
-            "------------------------------------------------------------\n",
-            "📷 BEST IMAGE MATCHES:\n",
-            "   • 0.6317 | food | [Image Found]\n",
-            "     Target: https://images.unsplash.com/photo-1565299624946-b28f40a0ae38\n",
-            "   • 0.6317 | food | [Image Found]\n",
-            "     Target: https://images.unsplash.com/photo-1565299624946-b28f40a0ae38\n",
-            "   • 0.6317 | food | [Image Found]\n",
-            "     Target: https://images.unsplash.com/photo-1565299624946-b28f40a0ae38\n",
-            "============================================================\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -808,40 +759,10 @@
         "mixed_search(dog_img_url)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2x2DY7jVjout",
-        "outputId": "ca1d7d73-305b-40dd-f1b4-39caa1f3f3ce"
+        "id": "2x2DY7jVjout"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            ">>> TEST 2: Image Search (Using a URL of a Dog)\n",
-            "🖼️  Query: [Image URL]\n",
-            "\n",
-            "🔎 MIXED RESULTS (Guaranteed):\n",
-            "============================================================\n",
-            "📄 BEST TEXT MATCHES:\n",
-            "   • 0.6348 | animals | \"My golden retriever is afraid of the vacuum cleane...\"\n",
-            "   • 0.6319 | animals | \"Does your pet have a favorite toy they carry every...\"\n",
-            "   • 0.6213 | animals | \"Why do dogs chase their own tails? It's hilarious....\"\n",
-            "------------------------------------------------------------\n",
-            "📷 BEST IMAGE MATCHES:\n",
-            "   • 0.9008 | animals | [Image Found]\n",
-            "     Target: https://images.unsplash.com/photo-1552053831-71594a27632d\n",
-            "   • 0.9008 | animals | [Image Found]\n",
-            "     Target: https://images.unsplash.com/photo-1552053831-71594a27632d\n",
-            "   • 0.9008 | animals | [Image Found]\n",
-            "     Target: https://images.unsplash.com/photo-1552053831-71594a27632d\n",
-            "============================================================\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
