Refactor embedding logic in GraphRAG notebook to check for existing embeddings before processing; added rate limit handling and improved output formatting.

--- a/GraphRAG_Social_Media_Neo4j.ipynb
+++ b/GraphRAG_Social_Media_Neo4j.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lbsocial/data-analysis-with-generative-ai/blob/main/GraphRAG_Social_Media_Neo4j.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -94,16 +94,16 @@
       "execution_count": null,
       "id": "4cec4559",
       "metadata": {
-        "id": "4cec4559",
-        "outputId": "585b4c3b-d36f-4952-f438-25e8ee8727fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4cec4559",
+        "outputId": "585b4c3b-d36f-4952-f438-25e8ee8727fd"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "✅ Connected to Neo4j\n",
             "✅ Connected to Gemini (Gemini 2.0 Flash)\n"
@@ -151,23 +151,23 @@
       "execution_count": 22,
       "id": "97025886",
       "metadata": {
-        "id": "97025886",
-        "outputId": "d42abde8-66d7-443c-85c1-18747403d8a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "97025886",
+        "outputId": "d42abde8-66d7-443c-85c1-18747403d8a1"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "WARNING:neo4j.notifications:Received notification from DBMS server: <GqlStatusObject gql_status='01N00', status_description='warn: feature deprecated. CALL subquery without a variable scope clause is deprecated. Use CALL () { ... }', position=<SummaryInputPosition line=2, column=9, offset=9>, raw_classification='DEPRECATION', classification=<NotificationClassification.DEPRECATION: 'DEPRECATION'>, raw_severity='WARNING', severity=<NotificationSeverity.WARNING: 'WARNING'>, diagnostic_record={'_classification': 'DEPRECATION', '_severity': 'WARNING', '_position': {'offset': 9, 'line': 2, 'column': 9}, 'OPERATION': '', 'OPERATION_CODE': '0', 'CURRENT_SCHEMA': '/'}> for query: \"\\n        CALL {\\n            MATCH (t:Tweet) RETURN 'Tweet' AS label, count(t) AS count\\n            UNION ALL\\n            MATCH (u:User)  RETURN 'User'  AS label, count(u) AS count\\n            UNION ALL\\n            MATCH (h:Hashtag) RETURN 'Hashtag' AS label, count(h) AS count\\n            UNION ALL\\n            MATCH (p:Place) RETURN 'Place' AS label, count(p) AS count\\n        }\\n        RETURN label, count\\n    \"\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "── Graph Node Summary ──\n",
             "       Tweet: 100\n",
@@ -265,45 +265,73 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# ── Fetch all tweet texts ─────────────────────────────────────────\n",
-        "with driver.session(database=\"neo4j\") as session:\n",
-        "    result = session.run(\"MATCH (t:Tweet) RETURN t.id AS id, t.text AS text\")\n",
-        "    tweets = [(record[\"id\"], record[\"text\"]) for record in result]\n",
-        "\n",
-        "print(f\"📄 Found {len(tweets)} tweets to embed.\")\n",
-        "\n",
-        "# ── Batch embed (20 tweets at a time) ─────────────────────────────\n",
-        "BATCH_SIZE = 20\n",
-        "for i in range(0, len(tweets), BATCH_SIZE):\n",
-        "    batch = tweets[i : i + BATCH_SIZE]\n",
-        "    ids = [t[0] for t in batch]\n",
-        "    texts = [t[1] for t in batch]\n",
-        "\n",
-        "    embeddings = get_embeddings(texts)\n",
-        "\n",
-        "    # Write embeddings back to Neo4j\n",
-        "    with driver.session(database=\"neo4j\") as session:\n",
-        "        session.run(\n",
-        "            \"\"\"\n",
-        "            UNWIND $data AS row\n",
-        "            MATCH (t:Tweet {id: row.id})\n",
-        "            SET t.embedding = row.embedding\n",
-        "            \"\"\",\n",
-        "            data=[{\"id\": id_, \"embedding\": emb} for id_, emb in zip(ids, embeddings)],\n",
-        "        )\n",
-        "\n",
-        "    print(f\"  ✅ Embedded batch {i // BATCH_SIZE + 1}/{(len(tweets) - 1) // BATCH_SIZE + 1}\")\n",
-        "\n",
-        "\n",
-        "print(\"\\n🎉 All tweet embeddings stored in Neo4j!\")"
-      ],
+      "execution_count": null,
+      "id": "M8lPYW_b2yX8",
       "metadata": {
         "id": "M8lPYW_b2yX8"
       },
-      "id": "M8lPYW_b2yX8",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# ── Check if embeddings already exist ──────────────────────────────\n",
+        "with driver.session(database=\"neo4j\") as session:\n",
+        "    result = session.run(\"\"\"\n",
+        "        MATCH (t:Tweet)\n",
+        "        RETURN count(t) AS total_tweets,\n",
+        "               count(t.embedding) AS tweets_with_embeddings\n",
+        "    \"\"\")\n",
+        "    record = result.single()\n",
+        "    total_tweets = record[\"total_tweets\"]\n",
+        "    tweets_with_embeddings = record[\"tweets_with_embeddings\"]\n",
+        "\n",
+        "print(f\"📊 Tweet embedding status:\")\n",
+        "print(f\"   Total tweets: {total_tweets}\")\n",
+        "print(f\"   Tweets with embeddings: {tweets_with_embeddings}\")\n",
+        "\n",
+        "# ── Only embed if needed ───────────────────────────────────────────\n",
+        "if tweets_with_embeddings == total_tweets and total_tweets > 0:\n",
+        "    print(\"\\n✅ All tweets already have embeddings! Skipping embedding step.\")\n",
+        "    print(\"   💡 This saves significant API quota!\")\n",
+        "else:\n",
+        "    print(f\"\\n⏳ Need to embed {total_tweets - tweets_with_embeddings} tweets...\")\n",
+        "    \n",
+        "    # Fetch tweets that need embeddings\n",
+        "    with driver.session(database=\"neo4j\") as session:\n",
+        "        result = session.run(\"\"\"\n",
+        "            MATCH (t:Tweet)\n",
+        "            WHERE t.embedding IS NULL\n",
+        "            RETURN t.id AS id, t.text AS text\n",
+        "        \"\"\")\n",
+        "        tweets = [(record[\"id\"], record[\"text\"]) for record in result]\n",
+        "\n",
+        "    if len(tweets) == 0:\n",
+        "        print(\"✅ No tweets need embedding!\")\n",
+        "    else:\n",
+        "        print(f\"📄 Embedding {len(tweets)} tweets...\")\n",
+        "        \n",
+        "        # ── Batch embed (20 tweets at a time) ─────────────────────\n",
+        "        BATCH_SIZE = 20\n",
+        "        for i in range(0, len(tweets), BATCH_SIZE):\n",
+        "            batch = tweets[i : i + BATCH_SIZE]\n",
+        "            ids = [t[0] for t in batch]\n",
+        "            texts = [t[1] for t in batch]\n",
+        "\n",
+        "            embeddings = get_embeddings(texts)\n",
+        "\n",
+        "            # Write embeddings back to Neo4j\n",
+        "            with driver.session(database=\"neo4j\") as session:\n",
+        "                session.run(\n",
+        "                    \"\"\"\n",
+        "                    UNWIND $data AS row\n",
+        "                    MATCH (t:Tweet {id: row.id})\n",
+        "                    SET t.embedding = row.embedding\n",
+        "                    \"\"\",\n",
+        "                    data=[{\"id\": id_, \"embedding\": emb} for id_, emb in zip(ids, embeddings)],\n",
+        "                )\n",
+        "\n",
+        "            print(f\"  ✅ Embedded batch {i // BATCH_SIZE + 1}/{(len(tweets) - 1) // BATCH_SIZE + 1}\")\n",
+        "\n",
+        "        print(\"\\n🎉 All tweet embeddings stored in Neo4j!\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -323,16 +351,16 @@
       "execution_count": 24,
       "id": "25bb5bb8",
       "metadata": {
-        "id": "25bb5bb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "25bb5bb8",
         "outputId": "afb15c73-a397-47af-c025-4bcad3968486"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Attempting to drop existing index 'tweet_embeddings' if it exists...\n",
             "✅ Index 'tweet_embeddings' dropped (if it existed).\n",
@@ -409,16 +437,16 @@
       "execution_count": 25,
       "id": "cd877d2a",
       "metadata": {
-        "id": "cd877d2a",
-        "outputId": "fc0aadea-8d77-4412-97e3-23dce3578bde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cd877d2a",
+        "outputId": "fc0aadea-8d77-4412-97e3-23dce3578bde"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🔎 Vector Search Results for: 'What are people saying about graph databases?'\n",
             "\n",
@@ -489,16 +517,16 @@
       "execution_count": 26,
       "id": "51b3d6f7",
       "metadata": {
-        "id": "51b3d6f7",
-        "outputId": "33c04fe3-2e0f-4ebd-8cb5-ef81d2121344",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "51b3d6f7",
+        "outputId": "33c04fe3-2e0f-4ebd-8cb5-ef81d2121344"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🕸️ GraphRAG Results for: 'What are people saying about graph databases?'\n",
             "\n",
@@ -639,8 +667,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "✅ RAG pipelines ready.\n"
           ]
@@ -736,20 +764,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "af9459ed",
       "metadata": {
-        "id": "af9459ed",
-        "outputId": "2a2f3292-a104-4eb3-82db-795501d891ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 369
-        }
+        },
+        "id": "af9459ed",
+        "outputId": "2a2f3292-a104-4eb3-82db-795501d891ea"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "================================================================================\n",
             "❓ Question: What are people saying about graph databases and who are the most active users talking about them?\n",
@@ -762,9 +790,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -778,8 +806,8 @@
         "\n",
         "comparison_questions = [\n",
         "    \"What are people saying about graph databases and who are the most active users talking about them?\",\n",
-        "    \"Which cities generate the most discussion about AI and cloud computing?\",\n",
-        "    \"Are there any users who tweet about both Python and Neo4j? What are they saying?\",\n",
+        "    # \"Which cities generate the most discussion about AI and cloud computing?\",  # Uncomment to run more questions\n",
+        "    # \"Are there any users who tweet about both Python and Neo4j? What are they saying?\",  # Uncomment to run more questions\n",
         "]\n",
         "\n",
         "for question in comparison_questions:\n",
@@ -792,20 +820,26 @@
         "        print(rag_answer(question))\n",
         "    except Exception as e:\n",
         "        print(f\"⚠️ Error during Vector RAG: {e}\")\n",
+        "        if \"quota\" in str(e).lower() or \"429\" in str(e):\n",
+        "            print(\"⏳ Rate limit hit. Waiting 2 minutes before retrying...\")\n",
+        "            time.sleep(120)\n",
         "\n",
-        "    # ⏳ Pause to respect API rate limits\n",
-        "    print(\"\\n... (sleeping 30s to avoid rate limits) ...\")\n",
-        "    time.sleep(30)\n",
+        "    # ⏳ Pause to respect API rate limits (increased for free tier)\n",
+        "    print(\"\\n... (sleeping 90s to avoid rate limits) ...\")\n",
+        "    time.sleep(90)\n",
         "\n",
         "    print(\"\\n🕸️ ── GRAPHRAG (Vector + Graph Traversal) ──\")\n",
         "    try:\n",
         "        print(graph_rag_answer(question))\n",
         "    except Exception as e:\n",
         "        print(f\"⚠️ Error during GraphRAG: {e}\")\n",
+        "        if \"quota\" in str(e).lower() or \"429\" in str(e):\n",
         "\n",
-        "    # ⏳ Longer pause between questions\n",
-        "    print(\"\\n... (sleeping 60s before next question) ...\\n\")\n",
-        "    time.sleep(60)"
+        "            print(\"⏳ Rate limit hit. Waiting 2 minutes before continuing...\")    time.sleep(120)\n",
+        "\n",
+        "            time.sleep(120)    print(\"\\n... (sleeping 2 minutes before next question) ...\\n\")\n",
+        "\n",
+        "    # ⏳ Longer pause between questions (increased for free tier)"
       ]
     },
     {
@@ -930,16 +964,27 @@
         "# ── Analytical questions that benefit from Cypher ──────────────────\n",
         "analytical_questions = [\n",
         "    \"Which user has the most followers and what do they tweet about?\",\n",
-        "    \"How many tweets were posted from each city?\",\n",
-        "    \"Which hashtags are most frequently used together?\",\n",
+        "    # Uncomment to run more questions (watch your rate limits!)\n",
+        "    # \"How many tweets were posted from each city?\",\n",
+        "    # \"Which hashtags are most frequently used together?\",\n",
         "]\n",
         "\n",
         "for q in analytical_questions:\n",
         "    print(\"=\" * 80)\n",
         "    print(f\"❓ {q}\")\n",
         "    print(\"=\" * 80)\n",
-        "    print(cypher_rag_answer(q))\n",
-        "    print()"
+        "    try:\n",
+        "\n",
+        "        print(cypher_rag_answer(q))        time.sleep(90)\n",
+        "\n",
+        "    except Exception as e:        print(\"... (sleeping 90s before next query) ...\")\n",
+        "\n",
+        "        print(f\"⚠️ Error: {e}\")    if analytical_questions.index(q) < len(analytical_questions) - 1:\n",
+        "\n",
+        "        if \"quota\" in str(e).lower() or \"429\" in str(e):    # Add delay between Cypher queries\n",
+        "\n",
+        "            print(\"⏳ Rate limit hit. Please wait before running more queries.\")    print()\n",
+        "            break"
       ]
     },
     {
@@ -1167,9 +1212,10 @@
         "# ── Geo-scoped questions across multiple cities ────────────────────\n",
         "geo_rag_demos = [\n",
         "    (\"What are people saying about AI and machine learning?\", \"London, UK\", 100),\n",
-        "    (\"What do people think about cloud computing and serverless?\", \"New York, NY\", 80),\n",
-        "    (\"What do people think about cloud computing and serverless?\", \"San Francisco, CA\", 80),\n",
-        "    (\"What do people think about cloud computing and serverless?\", \"Tokyo, JP\", 80),\n",
+        "    # Uncomment one at a time to avoid rate limits on free tier\n",
+        "    # (\"What do people think about cloud computing and serverless?\", \"New York, NY\", 80),\n",
+        "    # (\"What do people think about cloud computing and serverless?\", \"San Francisco, CA\", 80),\n",
+        "    # (\"What do people think about cloud computing and serverless?\", \"Tokyo, JP\", 80),\n",
         "]\n",
         "\n",
         "for question, city, radius in geo_rag_demos:\n",
@@ -1177,8 +1223,18 @@
         "    print(f\"❓ {question}\")\n",
         "    print(f\"📍 Within {radius} km of {city}\")\n",
         "    print(\"=\" * 70)\n",
-        "    print(geo_graph_rag_answer(question, city, radius_km=radius))\n",
-        "    print()"
+        "    try:\n",
+        "\n",
+        "        print(geo_graph_rag_answer(question, city, radius_km=radius))        time.sleep(90)\n",
+        "\n",
+        "    except Exception as e:        print(\"... (sleeping 90s before next geo query) ...\")\n",
+        "\n",
+        "        print(f\"⚠️ Error: {e}\")    if geo_rag_demos.index((question, city, radius)) < len(geo_rag_demos) - 1:\n",
+        "\n",
+        "        if \"quota\" in str(e).lower() or \"429\" in str(e):    # Add delay between geo queries\n",
+        "\n",
+        "            print(\"⏳ Rate limit hit. Please wait a few minutes before running more queries.\")    print()\n",
+        "            break"
       ]
     },
     {
@@ -1240,6 +1296,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -1256,10 +1316,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
