--- a/GraphRAG_Social_Media_Neo4j.ipynb
+++ b/GraphRAG_Social_Media_Neo4j.ipynb
@@ -279,7 +279,9 @@
         "\n",
         "We use Gemini's `gemini-embedding-001` model to convert every tweet's text into a **3072-dimensional vector**. This vector captures the *semantic meaning* of the text.\n",
         "\n",
-        "We then write each embedding back to the `Tweet` node as a property called `embedding`."
+        "We then write each embedding back to the `Tweet` node as a property called `embedding`.\n",
+        "\n",
+        "![Step 3: Embedding Transformation](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/step3-embed-to-a-node.png?raw=true)"
       ]
     },
     {
@@ -505,7 +507,9 @@
         "---\n",
         "## 🕸️ Step 6: GraphRAG Retrieval (Vector + Graph Traversal)\n",
         "\n",
-        "This is the key innovation. After finding similar tweets via vector search, we **traverse the graph** to collect rich context:\n",
+        "This is the key innovation. After finding similar tweets via vector search, we **traverse the graph** to collect rich context.\n",
+        "\n",
+        "![Step 6: Graph Context Expansion](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/step6-node-expand.png?raw=true)\n",
         "\n",
         "| Traversal | What we get |\n",
         "|-----------|-------------|\n",
@@ -805,6 +809,8 @@
         "\n",
         "For structured analytical questions (\"How many tweets per city?\"), we can let the LLM **generate Cypher queries** directly. This combines the power of graph queries with natural language.\n",
         "\n",
+        "![Step 10: Cypher Augmented Generation Workflow](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/step10-llm-generate-cypther.png?raw=true)\n",
+        "\n",
         "**How it works:**\n",
         "1. **Generate**: LLM creates a Cypher query based on user's question and graph schema\n",
         "2. **Execute**: Run the generated query against Neo4j\n",
@@ -941,6 +947,8 @@
         "## 🌍 Step 11: Geospatial Queries — Find Tweets Near a Location\n",
         "\n",
         "Every Tweet and Place node in our graph has a `point()` property storing longitude/latitude. Neo4j's built-in `point.distance()` function lets us find tweets **within a radius** of any coordinate — no external GIS tools needed.\n",
+        "\n",
+        "![Step 11: Geospatial Radius Filter](https://github.com/lbsocial/data-analysis-with-generative-ai/blob/main/image/step11-geo-query-point.png?raw=true)\n",
         "\n",
         "**Use cases:**\n",
         "- \"What are people tweeting about near Times Square?\"\n",
